--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : Your Name
+title                    : Damayanti Anashua Chakraborty
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : Your Name
-description              : Your Name - Projects and CV 
+name                     : Damayanti Chakraborty
+description              : Maya Chakraborty - Projects and CV 
 baseurl                  : "fa25-portfolio-maya-chakr" # Set this to your repo name 
 
 # Theme and Style
